[GGC-295] fix play button too close to promo logos on small screens

--- a/src/containers/top/Top.css
+++ b/src/containers/top/Top.css
@@ -60,6 +60,7 @@
   z-index: 1;
   width: 160px;
   height: 74px;
+  margin-bottom: 70px;
 }
 
 .gg-h1 {
